--- a/src/components/global/ErrorMessage/errorMessage.module.scss
+++ b/src/components/global/ErrorMessage/errorMessage.module.scss
@@ -3,12 +3,12 @@
 .error-message {
   text-align: center;
 
-  &__icon,
+  svg,
   &__description {
     margin-bottom: 16px;
   }
 
-  &__icon {
+  svg {
     height: 28px;
     width: 28px;
     color: $tertiary-color;
