--- a/src/components/GifCardList/gifCardList.module.scss
+++ b/src/components/GifCardList/gifCardList.module.scss
@@ -35,7 +35,11 @@
     font-weight: bold;
   }
 
-  @media #{$media-mobile-sm} {
+  @media #{$media-mobile} {
     font-size: $font-size--xl;
+  }
+
+  @media #{$media-mobile-sm} {
+    font-size: $font-size--lg;
   }
 }
