Increase line height of search results header

--- a/src/components/GifCardList/gifCardList.module.scss
+++ b/src/components/GifCardList/gifCardList.module.scss
@@ -37,6 +37,7 @@
 
   @media #{$media-mobile} {
     font-size: $font-size--xl;
+    line-height: $font-size--xl;
   }
 
   @media #{$media-mobile-sm} {
