Increase line height of search results header

--- a/src/components/GifCardList/gifCardList.module.scss
+++ b/src/components/GifCardList/gifCardList.module.scss
@@ -30,6 +30,7 @@
 .search-header {
   font-size: $font-size--xxl;
   margin-bottom: 1rem;
+  line-height: $font-size--xxl;
 
   span {
     font-weight: bold;
@@ -37,7 +38,6 @@
 
   @media #{$media-mobile} {
     font-size: $font-size--xl;
-    line-height: $font-size--xl;
   }
 
   @media #{$media-mobile-sm} {
