--- a/src/components/GifDetails/gifDetails.module.scss
+++ b/src/components/GifDetails/gifDetails.module.scss
@@ -18,6 +18,7 @@
   &-title {
     font-weight: $font-weight--bold;
     margin-bottom: 0.7rem;
+    line-height: $font-size--xl;
   }
 
   @media #{$media-tablet} {
