Increase line height of gif title on single GIF page

--- a/src/components/GifDetails/gifDetails.module.scss
+++ b/src/components/GifDetails/gifDetails.module.scss
@@ -18,7 +18,7 @@
   &-title {
     font-weight: $font-weight--bold;
     margin-bottom: 0.7rem;
-    line-height: $font-size--xl;
+    line-height: $font-size--lg;
   }
 
   @media #{$media-tablet} {
